Updated the release note

--- a/AddGroup/MirrorTool.html
+++ b/AddGroup/MirrorTool.html
@@ -233,6 +233,8 @@
 </dd>
 <dt>Start</dt><dd><p>Starts the mirror mode.</p>
 </dd>
+<dt>Cancel</dt><dd><p>Reverts all changes in Mirror mode.</p>
+</dd>
 <dt>Done</dt><dd><p>Finishes the mirror mode.</p>
 </dd>
 </dl>
