--- a/PrimitiveShapesGroup/CapsuleTool.html
+++ b/PrimitiveShapesGroup/CapsuleTool.html
@@ -223,6 +223,8 @@
 </dd>
 <dt>Angle Snap</dt><dd><p>When you drag the mouse with this property on, the capsule’s forward direction will snap to every 90 degree.</p>
 </dd>
+<dt>Auto Smoothing</dt><dd><p>Creates smoothed surfaces which have a common smoothing group.</p>
+</dd>
 <dt>Border Check</dt><dd><p>If this is enabled, the ray cast will run and it checks if the created capsule is beyond the other polygons. It might cause a stop for a second at the beginning.</p>
 </dd>
 <dt>Glue</dt><dd><p>This property in Capsule tool isn’t used.</p>
