--- a/PrimitiveShapesGroup/CylinderTool.html
+++ b/PrimitiveShapesGroup/CylinderTool.html
@@ -248,6 +248,8 @@
 </dd>
 <dt>Angle Snap</dt><dd><p>When you drag the mouse with this property on, the disk’s direction will snap to every 90 degree.</p>
 </dd>
+<dt>Auto Smoothing</dt><dd><p>Creates smoothed surfaces which have a common smoothing group.</p>
+</dd>
 <dt>Border Check</dt><dd><p>If this is enabled, the ray cast will run and it checks if the created cylinder is beyond the other polygons. It might cause a stop for a second at the beginning.</p>
 </dd>
 <dt>Glue</dt><dd><p>The cylinder with this property enabled will be glued to the polygon where it started to be created. It means that the hidden part of the floor polygon by the created cylinder is removed.</p>
