--- a/PrimitiveShapesGroup/SphereTool.html
+++ b/PrimitiveShapesGroup/SphereTool.html
@@ -223,6 +223,8 @@
 </dd>
 <dt>Angle Snap</dt><dd><p>When you drag the mouse with this property on, the sphere’s forward direction will snap to every 90 degree time.</p>
 </dd>
+<dt>Auto Smoothing</dt><dd><p>Creates smoothed surfaces which have a common smoothing group.</p>
+</dd>
 </dl>
 <div class="figure align-default" id="id1">
 <a class="reference internal image-reference" href="../_images/UModeler_Sphere_OnTheFloor.jpg"><img alt="../_images/UModeler_Sphere_OnTheFloor.jpg" src="../_images/UModeler_Sphere_OnTheFloor.jpg" style="width: 286.9px; height: 263.15px;" /></a>
