Updated the release note.

--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -225,7 +225,8 @@
 <ul class="simple">
 <li><p>Asset : Includes the Moonglow Village Demo Package for 2.8.10 users.</p></li>
 <li><p>Fix : Fixed a crash error when undoing creating UModeler object in Unity 2021.2.1 and higher versions.</p></li>
-<li><p>Fix : Fixed a warning issue regarding “Serialization depth limit 10 exceeded” caused by the codes of Mirror Cancel Function which was implemented in 2.8.10</p></li>
+<li><p>Fix : Fixed a warning issue regarding “Serialization depth limit 10 exceeded” caused by the codes of Mirror Cancel Function which was implemented in 2.8.10. The cancel function of the mirror tool has been reverted so it won’t be available for now till we’ll find a solution.</p></li>
+<li><p>Fix : Fixed a .obj exporer bug where the multiple materials in the exported UModeler object couldn’t be imported in Unity.</p></li>
 </ul>
 </div>
 <div class="section" id="version-2-8-10f2-december-14-2021">
