Added description regarding disabing snap in line tool

--- a/DrawingGroup/linetool.html
+++ b/DrawingGroup/linetool.html
@@ -155,6 +155,8 @@
 </dd>
 <dt><code class="docutils literal notranslate"><span class="pre">SPACE</span></code></dt><dd><p>Confirms the drawn edges.</p>
 </dd>
+<dt>Holding <code class="docutils literal notranslate"><span class="pre">CTRL</span></code></dt><dd><p>Disables the cursor snap.</p>
+</dd>
 <dt><code class="docutils literal notranslate"><span class="pre">ESC</span></code></dt><dd><p>Cancels the previous point.</p>
 </dd>
 </dl>
