--- a/PrimitiveShapesGroup/StairTool.html
+++ b/PrimitiveShapesGroup/StairTool.html
@@ -139,7 +139,7 @@
 </dd>
 <dt>Rise</dt><dd><p>Distance between two neighbor treads.</p>
 </dd>
-<dt>Rotate by 90°</dt><dd><p>Rotates the stair preview. This property replaced <code class="docutils literal notranslate"><span class="pre">Wide</span> <span class="pre">Step</span></code> and <code class="docutils literal notranslate"><span class="pre">Reverse</span></code> properties with.</p>
+<dt>Rotate by 90°</dt><dd><p>Rotates the stair preview by 90 degrees. This property replaces <code class="docutils literal notranslate"><span class="pre">Wide</span> <span class="pre">Step</span></code> and <code class="docutils literal notranslate"><span class="pre">Reverse</span></code> properties.</p>
 </dd>
 </dl>
 <div class="admonition note">
