--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -155,7 +155,7 @@
 <li><p>Vertex/Edge/Polygon Tools : Fixed an issue regarding Generate UVs property in Element tools.</p></li>
 <li><p>Polygon Tool : Fixed a bug where Snap to Polygon doesn’t work when a polygon gets close to another polygon.</p></li>
 <li><p>Capsule Tool : Fixed an issue where Auto Smoothing property didn’t work in the Capsule tool.</p></li>
-<li><p>Hotspot Texturing : Fixed an issue of Hotspot texturing to make Scale property work better for a tripolygon.</p></li>
+<li><p>Hotspot Texturing : Fixed an issue of Hotspot texturing to make Scale property work better for a triangle.</p></li>
 <li><p>Stair Tool : Replaced Wide Step and Reverse properties with Rotate by 90° button.</p></li>
 </ul>
 </section>
