--- a/releasenotes_UModeler_2021.html
+++ b/releasenotes_UModeler_2021.html
@@ -249,7 +249,7 @@
 <ul class="simple">
 <li><p>Improved the performance of UModelerize by about 40 times so that any meshes even with smoothing groups can be converted to UModeler mesh immediately.</p></li>
 <li><p>Improved the way of drawing wireframe to increase the drawing speed and not to be affected by the postprocess.</p></li>
-<li><p>Improved the performance of mesh editing so that at leat the meses in the synty studio’s asset packages can be edited comfortably.</p></li>
+<li><p>Improved the performance of mesh editing so that at least the meshes in the synty studio’s asset packages can be edited comfortably.</p></li>
 </ul>
 </section>
 <section id="version-2-9-9-july-15-2022">
