--- a/RemoveGroup/index.html
+++ b/RemoveGroup/index.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Eraser Tool" href="EraserTool.html" />
-    <link rel="prev" title="Duplicate Tool" href="../AddGroup/DuplicateTool.html" /> 
+    <link rel="prev" title="Subdivide Tool" href="../AddGroup/SubdivideTool.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -111,7 +111,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../AddGroup/DuplicateTool.html" class="btn btn-neutral float-left" title="Duplicate Tool" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../AddGroup/SubdivideTool.html" class="btn btn-neutral float-left" title="Subdivide Tool" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="EraserTool.html" class="btn btn-neutral float-right" title="Eraser Tool" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
