--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 </figure>
 </div></blockquote>
 <a href="https://assetstore.unity.com/packages/tools/modeling/umodeler-model-your-world-80868?utm_source=manual&utm_medium=link&utm_campaign=umodeler" target="_blank">UModeler</a> |
-<a href="https://assetstore.unity.com/packages/slug/133081?utm_source=manual&utm_medium=link&utm_campaign=umodelerlite "target="_blank">UModeler Lite</a> |
-<a href="https://umodeler.github.io/UModelerLite.html" target="_blank">UModeler Lite Doc</a> |
+<a href="https://assetstore.unity.com/packages/tools/modeling/umodeler-x-with-ai-texturing-254983"target="_blank">UModeler X</a> |
 <a href="http://www.tripolygon.com" target="_blank">Website</a> |
 <a href="https://cafe.naver.com/tripolygon/31" target="_blank">한글 메뉴얼</a><p><span class="raw-html"><br /></span>
 Welcome to the UModeler Manual!</p>
